# fMRI-tutorial

./: .gitignore  README.md  pyproject.toml
notebooks/: project-template.ipynb  session00-Data.ipynb  session01-Data.ipynb  session01-Preprocessing.ipynb  session01_Data.ipynb  session02-GLM.ipynb  session02-Preprocessing.ipynb  session03-Group.ipynb  session04-Report.ipynb  session04_Group.ipynb
src/tutorial/utils/: fetch.py  paths.py
